tests/baselines/reference/computedPropertyNames24_ES6.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNames24_ES6.ts(9,6): error TS2466: 'super' cannot be referenced in a computed property name.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNames24_ES6.ts (1 errors) ====
    class Base {
        bar() {
            return 0;
        }
    }
    class C extends Base {
        // Gets emitted as super, not _super, which is consistent with
        // use of super in static properties initializers.
        [super.bar()]() { }
         ~~~~~
!!! error TS2466: 'super' cannot be referenced in a computed property name.
    }